--- a/admin/admin-manager-core/pom.xml
+++ b/admin/admin-manager-core/pom.xml
@@ -22,6 +22,10 @@
         </dependency>
         <dependency>
             <groupId>com.taoswork.tallycheck</groupId>
+            <artifactId>tallyuser-authentication-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.taoswork.tallycheck</groupId>
             <artifactId>tallyuser-api</artifactId>
         </dependency>
         <dependency>
